--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
     "sass": "^1.51.0",
